fixed images on iphones

--- a/style.css
+++ b/style.css
@@ -131,7 +131,6 @@ body {
 }
 
 #img-path {
-    width: fit-content;
     padding-top: 30px;
 }
 
